--- a/README.adoc
+++ b/README.adoc
@@ -26,16 +26,18 @@ To run the application, you will need the following:
 
 Once that's set up, execute the application with `./mvnw spring-boot:run`.
 
-You can test a few different things. The `/hello` endpoint only sends the question to the LLM as a test. The `/graph` endpoint goes to Neo4j before forwarding the returned graph data to the LLM for formatting the response. The `/llm` endpoint only sends the prompt to the LLM, and the `/vector` only retrieves reviews from the vector search in Neo4j. Here are some ideas for values to test the `/graph` endpoint:
+You can test a few different things. The `/graphTool` endpoint uses Neo4j as a tool by creating 2 access points - 1 for vector search and 1 for graph retrieval (based on vector search results). The output of the tools is sent to the LLM for a response. Here are some ideas for values to test the `/graph` endpoint:
 
 ```
-http ":8080/graph?searchPhrase=happy%20ending"
+http ":8080/graphTool?searchPhrase=happy%20ending"
 
-http ":8080/graph?searchPhrase=encouragement"
+http ":8080/graphTool?searchPhrase=encouragement"
 
-http ":8080/graph?searchPhrase=high tech"
+http ":8080/graphTool?searchPhrase=dragons and magic"
 
-http ":8080/graph?searchPhrase=caffeine"
+http ":8080/graphTool?searchPhrase=high tech"
+
+http ":8080/graphTool?searchPhrase=caffeine"
 ```
 
 *Note:* The above commands are using the https://httpie.io/[
@@ -45,13 +47,9 @@ HTTPie^] command line tool, but you can use `curl` similarly.
 
 PDF versions of accompanying presentations are published to SpeakerDeck.
 
-* https://speakerdeck.com/jmhreif/pass-or-play-what-does-genai-mean-for-the-java-developer-9a8ca522-2750-4e1a-b9cf-af7559dbdae6[GatewayJUG (Apr 2025)^]
-* https://speakerdeck.com/jmhreif/pass-or-play-what-does-genai-mean-for-the-java-developer-a0c6257e-56d8-45cb-9019-658439807ef7[CJUG (Nov 2024)^]
-* https://speakerdeck.com/jmhreif/pass-or-play-what-does-genai-mean-for-the-java-developer-9d1a9e3c-0d1a-4650-9cf7-5271dc6a21f3[JConf (Sep 2024)^]
-
 == Resources
 * Site: https://dev.neo4j.com/aura-java[Neo4j Aura^]
 * Documentation: https://docs.spring.io/spring-ai/reference/api/vectordbs/neo4j.html[Spring AI Neo4j Vector Store^]
-* Guide: https://neo4j.com/labs/genai-ecosystem/spring-ai[Spring AI Neo4j^]
+* Documentation: https://docs.spring.io/spring-ai/reference/api/tools.html[Spring AI Tools^]
 * Online training: https://graphacademy.neo4j.com/categories/llms/[GraphAcademy LLM courses^]
 * Documentation: https://platform.openai.com/docs/guides/embeddings[OpenAI Embeddings^]
